--- a/src/app/components/monaco/monaco.component.html
+++ b/src/app/components/monaco/monaco.component.html
@@ -1,34 +1,19 @@
-<!-- <div id="content">
-	<div id="left">
-		<app-editor></app-editor>
-		<p>NOTE: the above code editor is avaliable to be editted by anyone. I am not responsible for what may be seen here. I will likely implement a reset feature that will periodically reset the model of the editor.</p>
-	</div>
-  
-	<div id="right">
-		<h1 style="overflow-wrap: normal;">
-			Welcome to my live, collaborative code editor powered by Monaco code editor and my implementation of <a href="https://en.wikipedia.org/wiki/Operational_transformation">Operational Transformation</a>, or OT.
-			This editor allows you to code in real time with anyone else around the world. The interesting engineering problems posed in this project as well as my solutions will be discussed below in detail (eventually). Until then, the hyperlink
-			provided will give great insight into the kind of algorithms required to manage conflictions caused by latency between clients.
-			<br><br>
-			This user interface is no where near finished. The backend is roughly 90% complete. Click the GitHub icon in the right side of the upper toolbar to see code bases.
-
-		</h1>
-	</div>
-</div> -->
-
-<div class="editor-wrapper">
-	<app-editor></app-editor>
+<p *ngIf="this.documentMetadata != undefined && isDocumentFound">{{this.documentMetadata.filename}}</p>
+<div class="container" *ngIf="!isDocumentAuthenticated">
+	<form [formGroup]="documentForm" (ngSubmit)="authenticate()" >
+		<label for="id">Document Id: </label>
+ 	    <input id="id" type="text" [defaultValue]="this.documentId" readonly>
+		<label for="password">Document Password: </label>
+ 	    <input id="password" type="text" formControlName="documentPassword">
+		<div class="button-container">
+			<button type="submit" [disabled]="!documentForm.valid">Submit</button>
+		</div>
+	</form>
+</div>
+<div class="editor-wrapper" *ngIf="isDocumentAuthenticated">
+	<app-editor [documentId]="documentId" [documentPassword]="documentPassword"></app-editor>
 </div>
 
-<div class="editor-wrapper">
-	<h1 style="overflow-wrap: normal;">
-		Welcome to my live, collaborative code editor powered by Monaco code editor and my implementation of <a href="https://en.wikipedia.org/wiki/Operational_transformation">Operational Transformation</a>, or OT.
-		This editor allows you to code in real time with anyone else around the world. The interesting engineering problems posed in this project as well as my solutions will be discussed below in detail (eventually). Until then, the hyperlink
-		provided will give great insight into the kind of algorithms required to manage conflictions caused by latency between clients.
-		<br><br>
-		This user interface is no where near finished. The backend is roughly 90% complete. Click the GitHub icon in the right side of the upper toolbar to see code bases.
 
-	</h1>
-</div>
 
 
