--- a/src/app/components/monaco/monaco.component.css
+++ b/src/app/components/monaco/monaco.component.css
@@ -18,3 +18,16 @@
 	margin-right: 10%;
 	margin-top: 5%
 }
+
+.container {
+	display: flex;
+  	align-items: center;
+  	justify-content: center;
+	padding-top: 100px;
+}
+
+form {
+	display: flex;
+	flex-direction: column;
+	width: 200px;
+}
