Color scheme defined and basic styling

--- a/src/app/components/editor/editor.component.css
+++ b/src/app/components/editor/editor.component.css
@@ -9,4 +9,7 @@
 	/* padding: 5%; */
     /* width: 50vw; 
     height: 80vh;  */
+    background-color: #0D0D0D;
+    padding: 20px;
+	/* height: 100%; */
 }
