--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -5,11 +5,16 @@ form {
 	width: 200px;
 }
 
+.test {
+	background-color: #2F76DB;
+}
+
 .container {
 	display: flex;
   	align-items: center;
   	justify-content: center;
 	padding-top: 100px;
+	color: white;
 }
 
 .button-container button {
@@ -21,3 +26,13 @@ form {
 	display: flex;
   	justify-content: center;
 }
+
+.wrapper {
+	background-color: #16171B;
+	height: 100%;
+}
+
+
+
+
+
