--- a/src/app/components/editor/editor.component.css
+++ b/src/app/components/editor/editor.component.css
@@ -20,3 +20,10 @@
     width: 20%;
     height: 40%
 }
+
+.documentInformationEntry {
+    background-color: white;
+    display: flex;
+    width: 100%;
+    height:10%
+}
