--- a/src/app/components/editor/editor.component.html
+++ b/src/app/components/editor/editor.component.html
@@ -1,3 +1,4 @@
 <div class="container">
+    <div class="documentInformation">test</div>
     <ngx-monaco-editor class="editor" [options]="editorOptions" [model]="model" (onInit)="onInit($event)"></ngx-monaco-editor>
 </div>
