--- a/src/app/components/widget/widget.component.html
+++ b/src/app/components/widget/widget.component.html
@@ -1,1 +1,12 @@
-<div  class="widget" ><div>
+<!--
+	DOWNLOAD WIDGET
+-->
+<div  *ngIf="widgetTypeDownload" class="widgetDownload" >
+	Download
+<div>
+<!--
+	Collaborator WIDGET
+-->
+<div  *ngIf="widgetTypeCollaborator" class="widgetCollaborator" >
+	Collaborator
+<div>
