Button on download widget

--- a/src/app/components/widget/widget.component.html
+++ b/src/app/components/widget/widget.component.html
@@ -2,8 +2,10 @@
 	DOWLOAD WIDGET
 -->
 <div  *ngIf="widgetTypeDownload" class="widgetDownload" >
-	Download
-<div>
+	<Button (click)="buttonToggle == !buttonToggle" >Download File</Button>
+	<div>{{buttonToggle}}</div>
+</div>
+
 <!--
 	Collaborator WIDGET
 -->
