Downloading document and text === working

--- a/src/app/components/widget/widget.component.html
+++ b/src/app/components/widget/widget.component.html
@@ -2,7 +2,7 @@
 	DOWLOAD WIDGET
 -->
 <div  *ngIf="widgetTypeDownload" class="widgetDownload" >
-	<Button (click)="buttonToggle == !buttonToggle" >Download File</Button>
+	<Button (click)="downloadDocument()" >Download FILE</Button>
 	<div>{{buttonToggle}}</div>
 </div>
 
