--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar class="toolbar">
 	<div class="container">
-		<div class="">
+		<div class="logo">
 			<!-- <span><b>Project Monaco</b><small class="author-tag">by Stephen George</small></span> -->
 			<!-- <img src="/assets/project-monaco-transparent.png" alt="Project Monaco logo" width="160px" height="40px"> -->
 			<img src="/assets/project-monaco-transparent.png" alt="Project Monaco logo" width="240px" height="60px">
