--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,15 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+:root {
+	--dark: #0D0D0D;
+	--less-dark: #16171B;
+	--baby-blue: #2F76DB;
+	--baby-blue-shift: #084191;
+	--text-white: #FBFBFB;
+}
+
+.mat-form-field-outline-start, .mat-form-field-outline-end {
+    border-radius: 0 !important;
+}
