--- a/src/app/components/editor/editor.component.css
+++ b/src/app/components/editor/editor.component.css
@@ -4,6 +4,18 @@
 	min-height: 80vh; 
 }
 
+button {
+    width: 170px;
+    float: left;
+}
+.button-bar {
+    width: 100%;
+    padding-bottom: 65px;
+    padding-top: 10px
+    /* display: flex;
+    flex-direction: row; */
+}
+
 .container {
 	/* margin-top: 10%; */
 	/* padding: 5%; */
@@ -12,4 +24,9 @@
     background-color: #0D0D0D;
     padding: 20px;
 	/* height: 100%; */
+}
+
+h1 {
+    padding-top: 15px;
+    float: right;
 }
