--- a/src/styles.css
+++ b/src/styles.css
@@ -14,3 +14,27 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .mat-form-field-outline-start, .mat-form-field-outline-end {
     border-radius: 0 !important;
 }
+
+button {
+	width: 100%;
+	margin-top: 4px;
+	margin-left: 8px;
+
+	display: inline-block;
+	outline: 0;
+	border: 0;
+	cursor: pointer;
+	color: #fff;
+	font-weight: 500;
+	font-size: 15px;
+	font-weight: bold;
+	height: 51px;
+	padding: 0px 15px;
+	text-shadow: rgb(0 0 0 / 25%) 0px 3px 8px;
+	background: linear-gradient(45deg, var(--baby-blue), var(--baby-blue-shift));
+}
+
+button:hover {
+	box-shadow: 0px 0px 2px 1px var(--text-white);
+	transition: all 0.5s ease 0s;
+}
