--- a/src/app/components/home/open-document/open-document.component.scss
+++ b/src/app/components/home/open-document/open-document.component.scss
@@ -5,6 +5,11 @@
 	padding-top: 100px;
 	color: white;
 	// background-color: var(--baby-blue);
+	flex-direction: column;
+}
+
+p {
+	color: red;
 }
 
 .button-container button {
