--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -10,9 +10,9 @@
 		<div class='menu-button'></div>
 		</label>
 		<ul class="menu">
-			<li>Home</li>
-			<li>Author</li>
-			<li>Github</li>
+			<li><a href="/home">Home</a></li>
+			<li><a href="https://github.com/stephengeorge568" target="_blank">Author</a></li>
+			<li><a href="https://github.com/stephengeorge568" target="_blank">Github</a></li>
 		</ul>
 	</div>		
 	<!-- <div class="child">
