--- a/src/app/components/monaco/monaco.component.css
+++ b/src/app/components/monaco/monaco.component.css
@@ -7,6 +7,7 @@
 	display: flex;
   	align-items: center;
   	justify-content: center;
+	flex-direction: column;
 	padding-top: 50px;
 }
 
@@ -30,4 +31,12 @@ form {
 
 .button-container {
 	padding-right: 15px;
+}
+
+p {
+	color: red;
+}
+
+span {
+	
 }
