Toolbar fix, footer added, welcome landing

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,5 @@
 <div class="wrapper">
+	<app-welcome></app-welcome>
 	<app-open-document></app-open-document>
 	<app-create-document></app-create-document>
 </div>
