--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -5,13 +5,13 @@
 			<!-- <img src="/assets/project-monaco-transparent.png" alt="Project Monaco logo" width="160px" height="40px"> -->
 			<img src="/assets/project-monaco-transparent.png" alt="Project Monaco logo" width="240px" height="60px">
 		</div>
-		<input id="menu-toggle" type="checkbox" />
+		<!-- <input id="menu-toggle" type="checkbox" />
 		<label class='menu-button-container' for="menu-toggle">
 		<div class='menu-button'></div>
-		</label>
+		</label> -->
 		<ul class="menu">
 			<li><a href="/home">Home</a></li>
-			<li><a href="https://github.com/stephengeorge568" target="_blank">Author</a></li>
+			<li><a href="https://github.com/stephengeorge568" target="_blank">How It Works</a></li>
 			<li><a href="https://github.com/stephengeorge568" target="_blank">Github</a></li>
 		</ul>
 	</div>		
