--- a/src/app/components/monaco/monaco.component.css
+++ b/src/app/components/monaco/monaco.component.css
@@ -9,6 +9,7 @@
   	justify-content: center;
 	flex-direction: column;
 	padding-top: 50px;
+	
 }
 
 form {
@@ -19,8 +20,9 @@ form {
 
 .background {
 	background-color: #16171B;
-	height: 100%;
+	min-height: 83%;
 	color: white;
+	padding-bottom: 10px;
 }
 
 .file-metadata {
