--- a/src/app/components/toolbar/toolbar.component.css
+++ b/src/app/components/toolbar/toolbar.component.css
@@ -1,13 +1,7 @@
 .toolbar {
-    height: 80px;
+	height: 7%;
 	background: #0D0D0D;
-	box-shadow: 0px 4px 4px rgba(44, 125, 255, 0.4);
 	color: var(--text-white);
-
-	/* position: fixed;
-    position: -webkit-sticky; /* For macOS/iOS Safari 
-	top: 0px;  Sets the sticky toolbar to be on top 
-    z-index: 100; Ensure that your app's content doesn't overlap the toolbar */
 	display: flex;
 }
 
@@ -17,23 +11,17 @@
   width: 100%;
   display: flex;
   justify-content: center;
-  padding-top: 10px;
+  /* padding-top: 10px; */
 }
 
-
-/*
-bck 1F2D5A
-light lbue 2F76DB
-white FBFBFB
-
-*/
-
 .logo {
-	position: absolute;
+	margin-top: 10px;
+	/* padding-top: 10px; */
+	/* position: absolute;
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
-	width: auto;
+	width: auto; */
 }
 
 /* Drop down menu */
@@ -106,44 +94,23 @@ white FBFBFB
 	transform: rotate(-405deg);
   }
   
-  @media (max-width: 900px) {
-	.menu-button-container {
-	  display: flex;
+  @media (max-width: 900px), (max-height: 1000px) {
+
+	img {
+		width: 120px;
+		height: 30px;
 	}
-	.menu {
-	  position: absolute;
-	  top: 0;
-	  margin-top: 75px;
-	  left: 0;
-	  flex-direction: column;
-	  width: 100%;
-	  justify-content: center;
-	  align-items: center;
+
+	a {
+		font-size: 13px;
 	}
-	#menu-toggle ~ .menu li {
-	  height: 0;
-	  margin: 0;
-	  padding: 0;
-	  border: 0;
-	  transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
+
+	li {
+		
 	}
-	#menu-toggle:checked ~ .menu li {
-	  border: 1px solid #333;
-	  height: 2.5em;
-	  padding: 0.5em;
-	  transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
-	}
-	.menu > li {
-	  display: flex;
-	  justify-content: center;
-	  margin: 0;
-	  padding: 0.5em 0;
-	  width: 100%;
-	  color: white;
-	  background-color: #222;
-	}
-	.menu > li:not(:last-child) {
-	  border-bottom: 1px solid #444;
+
+	.logo {
+		margin-top: 22px;
 	}
   }
 
