--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,9 @@
 <div class="wrapper">
 	<app-welcome></app-welcome>
-	<app-open-document></app-open-document>
-	<app-create-document></app-create-document>
+	<div class="action">	
+		<app-open-document></app-open-document>
+	</div>
+	<div class="action end">
+		<app-create-document></app-create-document>
+	</div>
 </div>
