--- a/src/app/components/home/open-document/open-document.component.html
+++ b/src/app/components/home/open-document/open-document.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-	<!-- <h2>Open Document</h2> -->
+	<h2>Open Document</h2>
 	<p *ngIf="this.errorResponse">Incorrect ID and/or password.</p>
 	<form [formGroup]="documentForm" (ngSubmit)="onSubmit()" >
 		<mat-form-field [formGroup]="documentForm" appearance="outline">
@@ -8,7 +8,9 @@
 			<mat-error *ngIf="this.documentForm.valid">Please enter a positive integer ID.</mat-error>
 		</mat-form-field>
 		<div class="button-container">
-			<button  type="submit" [disabled]="!documentForm.valid">Open Document</button>
+			<button  type="submit" [disabled]="!documentForm.valid">
+				<mat-icon>edit</mat-icon><p>Submit</p>
+			</button>
 		</div>
 	</form>
 	
