--- a/src/app/components/home/open-document/open-document.component.scss
+++ b/src/app/components/home/open-document/open-document.component.scss
@@ -11,6 +11,21 @@ p {
 	color: red;
 }
 
+button {
+	margin-top: 3px;
+	width: 100%;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+  	justify-content: center;
+}
+
+button p {
+	color: var(--text-white);
+	padding-top: 10px;
+}
+
+
 .button-container button {
 	border-radius: 0;
 }
@@ -22,6 +37,14 @@ p {
 
 form {
 	display: flex;
-	flex-direction: row;
+	flex-direction: column;
+}
+
+h2 {
+	float: left;
+}
+
+mat-icon {
+	transform: scale(0.75);
 }
 
