--- a/src/styles.css
+++ b/src/styles.css
@@ -16,9 +16,9 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 }
 
 button {
-	width: 100%;
-	margin-top: 4px;
-	margin-left: 8px;
+	
+	/* margin-top: 4px;
+	margin-left: 8px; */
 
 	display: inline-block;
 	outline: 0;
