--- a/src/app/components/document-info/document-info.component.html
+++ b/src/app/components/document-info/document-info.component.html
@@ -1,5 +1,5 @@
 <div>
-	<p>Take note of the authentication credentials for the document you<br>have just created. There is no way to retrieve it.</p>
+	<p>This is the login credential for your new document.<br>Take note of this. There is no way to recover this.</p>
 	<p><strong>Id: </strong>{{this.id}}</p>
 	<p><strong>Password: </strong>{{this.password}}</p>
 	<button mat-button mat-dialog-close>Close</button>
