--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -11,7 +11,7 @@
 		</label> -->
 		<ul class="menu">
 			<li><a href="/home">Home</a></li>
-			<li><a href="https://github.com/stephengeorge568" target="_blank">How It Works</a></li>
+			<li><a href="how-it-works" target="_blank">How It Works</a></li>
 			<li><a href="https://github.com/stephengeorge568" target="_blank">Github</a></li>
 		</ul>
 	</div>		
