--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,18 +1,3 @@
-.toolbar {
-    position: fixed;
-	background: #000000;
-	box-shadow: 0px 4px 4px rgba(0,0,0,0.4);
-    position: -webkit-sticky; /* For macOS/iOS Safari */
-	color: #c9c9c9;
-    top: 0px; /* Sets the sticky toolbar to be on top */
-    z-index: 100; /* Ensure that your app's content doesn't overlap the toolbar */
-}
-
-.bar-text {
-	margin-left: auto;
-	margin-right: auto;
-}
-
-.icon-buttons {
-	align-content: right;
+.app-wrapper {
+	/* max-width: 100%; */
 }
