--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -10,8 +10,8 @@
 		<div class='menu-button'></div>
 		</label> -->
 		<ul class="menu">
-			<li><a href="">Home</a></li>
-			<li><a href="how-it-works">How It Works</a></li>
+			<li><a routerLink="">Home</a></li>
+			<li><a routerLink="how-it-works">How It Works</a></li>
 			<li><a href="https://github.com/stephengeorge568" target="_blank">Github</a></li>
 		</ul>
 	</div>		
