--- a/src/app/components/how-it-works/how-it-works.component.html
+++ b/src/app/components/how-it-works/how-it-works.component.html
@@ -6,7 +6,7 @@
 		can arise and the clients will fall out of sync. This issue is best illustrated with a simple example:</p>
 	<img src="/assets/OT-latency-explained.png" alt="OT latency issue explained image could not be shown at this time.">
 	<p>
-		In this example we have two clients: Amy and Bob. They are editting a document that currently as "abc" as the 
+		In this example we have two clients: Amy and Bob. They are editting a document that currently sas "abc" as the 
 		document model. Amy enters the character '@' at the beginning of the document. On her screen, she will see 
 		the document model update to "@abc". Her change to the document will then be sent to Bob's client, however it will take awhile for the message to travel to him.
 		At near the same time, Bob inserts character '%' at the beginning of the 
