--- a/src/app/components/editor/editor.component.html
+++ b/src/app/components/editor/editor.component.html
@@ -8,6 +8,6 @@
     </div>
     
     <div class="container">
-        <ngx-monaco-editor class="editor" [options]="editorOptions" [model]="model" (onInit)="onInit($event)"></ngx-monaco-editor>
+        <ngx-monaco-editor id="editor" class="editor" [options]="editorOptions" [model]="model" (onInit)="onInit($event)"></ngx-monaco-editor>
     </div>
 </div>
