--- a/src/app/components/editor/editor.component.html
+++ b/src/app/components/editor/editor.component.html
@@ -7,7 +7,7 @@
         <h1>{{filename}}.{{filetype}}</h1>
     </div>
     
-    <div class="container">
-        <ngx-monaco-editor id="editor" class="editor" [options]="editorOptions" [model]="model" (onInit)="onInit($event)"></ngx-monaco-editor>
+    <div class="container" *ngIf="isFiletypeLoaded">
+        <ngx-monaco-editor id="editor" class="editor" [options]="editorOptions" [model]="model" (onInit)="onInit($event)" suggestOnTriggerCharacters="false"></ngx-monaco-editor>
     </div>
 </div>
